nginxIngressHAproxyBareMetal/hello-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app1
  template:
    metadata:
      labels:
        app: hello-app1
    spec:
      containers:
      - name: hello-app1
        image: hashicorp/http-echo
        ports:
        - containerPort: 8080
        args:
          - "-text=hello from app1"
          - "-listen=:8080"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app1
spec:
  selector:
    app: hello-app1
  ports:
    - port: 8080
